--- a/butterknife-sample/res/layout/simple_activity.xml
+++ b/butterknife-sample/res/layout/simple_activity.xml
@@ -24,7 +24,14 @@
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
-      android:layout_margin="20dp"
+      android:layout_margin="10dp"
+      />
+  <ListView
+      android:id="@+id/list_of_things"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_margin="10dp"
       />
   <TextView
       android:id="@+id/footer"
