Add optional parameter to @InjectExtra annotation

--- a/butterknife-sample/res/layout/hello_activity.xml
+++ b/butterknife-sample/res/layout/hello_activity.xml
@@ -12,4 +12,11 @@
       android:gravity="center"
       android:textSize="50sp"
       />
+  <TextView
+      android:id="@+id/txtReply"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:textSize="20sp"
+      />
 </LinearLayout>
