--- a/website/static/app.css
+++ b/website/static/app.css
@@ -46,8 +46,12 @@ code {
   font-size: 18px;
   line-height: 25px;
   font-weight: 400;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   text-shadow: 0px 0px 3px #fff;
+}
+.side a {
+  color: #555;
+  padding: 5px;
 }
 
 .main {
